# satb-ai

./: .gitignore  CODE_REVIEW_DIRECT_EXTRACTION.md  CODE_REVIEW_FINDINGS.md  Crossing The Bar.mscx  Crossing The Bar.mscz  Crossing The Bar.musicxml  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  LYRIC_ASSIGNMENT_FEATURE.md  LYRIC_DISTRIBUTION_FIX_SUMMARY.md  MISSING_GLOBAL_ELEMENTS_ANALYSIS.md  MS3_RESEARCH_NOTES.md  MUSIC21_HASATTR_ISSUE_ANALYSIS.md  PHASE3_BUG_FIX_PLAN.md  README  Requirements-ms3.md  Requirements.md  SLUR_LOSS_ANALYSIS.md  SPANNER_CORRUPTION_FIX_PLAN.md  SPANNER_FIX_IMPLEMENTATION.md  SPANNER_IMPLEMENTATION_SUMMARY.md  SPANNER_SUPPORT_PLAN.md  SYSTEM_BREAKS_FIX_PLAN.md  TITLE_FIX_PLAN.md  VOICE_IDENTIFICATION_HARDCODE_PLAN.md  analyze_measure_29.py  analyze_measure_4_timing.py  check_ties.py  debug_crescendo_analysis.py  debug_direct_extraction.py  debug_dynamics_test.py  debug_measure_29_specific.py  debug_minimal_slur_loss.py  debug_note_based_slur_fix.py  debug_save_load_issue.py  debug_simple_slur_fix.py  debug_slur_mapping.py  debug_spanner_duplication.py  debug_spanner_relevance.py  debug_spanner_repair.py  (+41 more)
.clinerules/: music21.md
Crossing The Bar_voices/: Crossing The Bar-Alto.musicxml  Crossing The Bar-Bass.musicxml  Crossing The Bar-Soprano.musicxml  Crossing The Bar-Tenor.musicxml
Crossing The Bar_voices_fixed/: Crossing The Bar-Soprano.musicxml
Crossing The Bar_voices_test/: Crossing The Bar-Alto.musicxml  Crossing The Bar-Bass.musicxml  Crossing The Bar-Soprano.musicxml  Crossing The Bar-Tenor.musicxml
demo_output/: Crossing The Bar-Alto.musicxml  Crossing The Bar-Bass.musicxml  Crossing The Bar-Soprano.musicxml  Crossing The Bar-Tenor.musicxml
design_v2/: README.md  api_specification.md  architecture.md  lyric_distribution_architecture.md  migration_guide.md  spanner_handling_architecture.md  testing_plan.md
docs/: ms3.txt
satb_splitter/: __init__.py  __main__.py  contextual_unifier.py  converter.py  direct_voice_extractor.py  exceptions.py  exploder.py  main.py  phase3_unification.py  position_based_slur_fixer.py  score_processor.py  simple_slur_fixer.py  spanner_analyzer.py  spanner_builder.py  spanner_extractor.py  spanner_processor.py  staff_simplifier.py  timing_validator.py  unification.py  utils.py  (+4 more)
(+20 files in other folders)
